--- a/heylead.css
+++ b/heylead.css
@@ -1134,7 +1134,7 @@ color:black;
 
 .block p{
     font-family: 'Josefin Sans', sans-serif;
-    font-weight: bold;
+    font-weight: normal;
     margin-top: 3rem;
     margin: .6rem; 
     color:grey;
